--- a/guns-gateway/src/main/resources/application.yml
+++ b/guns-gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ jwt:
   expiration: 604800      #7天 单位:秒
   auth-path: auth         #认证请求的路径
   md5-key: randomKey      #md5加密混淆key
-  ignore-url: /user/,/film #忽略列表
+  ignore-url: /user/register,/user/check #忽略列表
 server:
   port: 80 #项目端口
 
@@ -33,7 +33,7 @@ spring:
     server: true
     registry: zookeeper://localhost:2181
   datasource:
-      url: jdbc:mysql://106.54.53.239:3306/guns_rest?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/guns_rest?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
       username: root
       password: 123456
       filters: log4j,wall,mergeStat
