--- a/guns-rest/src/main/resources/application.yml
+++ b/guns-rest/src/main/resources/application.yml
@@ -28,7 +28,7 @@ mybatis-plus:
 
 spring:
   datasource:
-      url: jdbc:mysql://106.54.53.239:3306/guns_rest?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/guns_rest?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
       username: root
       password: 123456
       filters: log4j,wall,mergeStat
