--- a/guns-film/src/main/resources/application.yml
+++ b/guns-film/src/main/resources/application.yml
@@ -10,7 +10,7 @@ jwt:
   md5-key: randomKey      #md5加密混淆key
 
 server:
-  port: 8083 #项目端口
+  port: 8084 #项目端口
 
 mybatis-plus:
   mapper-locations: classpath*:com/stylefeng/guns/rest/**/mapping/*.xml
@@ -36,7 +36,7 @@ spring:
       name: dubbo
       port: 20881
   datasource:
-      url: jdbc:mysql://106.54.53.239:3306/guns_rest?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/guns_rest?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
       username: root
       password: 123456
       filters: log4j,wall,mergeStat
